--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman,
-title: "Sumi-Chan Discord Bot",
+theme: jekyll-theme-cayman
+title: "Sumi-Chan Discord Bot"
 description: "A Multi-Use Discord Bot."
